new hw3.ipynb for screenshot credit.

--- a/homework3/hw3.ipynb
+++ b/homework3/hw3.ipynb
@@ -386,8 +386,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "26984f6d-d246-493c-939c-87c9e53b8ff4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am printing something to add another commit so I can screenshot it\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"I am printing something to add another commit so I can screenshot it\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b7a3030-f1e8-4d9c-a0ba-ff1674f7d47d",
    "metadata": {},
    "outputs": [],
    "source": []
