git commit git requested

--- a/homework5/Untitled.ipynb
+++ b/homework5/Untitled.ipynb
@@ -32,9 +32,12 @@
     "#1.21 git checkout [main or master]\n",
     "#1.22 \n",
     "\n",
-    "                    ulab\n",
-    "        ulab_2024                            ulab_lucas\n",
-    "    README.md, h"
+    "#                                                                           ulab\n",
+    "#                         ulab_2024                                                                                        ulab_lucas\n",
+    "#    README.md, homework1, homework2, homework3, homework4, homework5                                 homework3, BRANCHhomework4, BRANCHhomework5\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
